opam-version: "2.0"
name: "lastfm"
version: "0.3.2"
maintainer: "Romain Beauxis <toots@rastageeks.org>"
authors: "The Savonet Team <savonet-users@lists.sourceforge.net>"
homepage: "https://github.com/savonet/ocaml-lastfm"
build: [
  ["./bootstrap"] {dev}
  ["./configure" "--prefix" prefix]
  [make "clean"] {dev}
  [make]
]
install: [
  [make "install"]
]
depends: [
  "ocaml"
  "ocamlfind" {build}
  "pcre"
  "xmlplaylist"
]
depopts: [ "ocamlnet" ]
conflicts: [ "ocamlnet" {>= "4.0.0"} ]
bug-reports: "https://github.com/savonet/ocaml-lastfm/issues"
dev-repo: "git+https://github.com/savonet/ocaml-lastfm.git"
synopsis:
  "The lastfm library is an implementation of the API used by the last.fm to keep count of played songs"
